// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runDoctorReport i18n snapshots > renders stable Chinese doctor checks from fabric_language=zh-CN 1`] = `
[
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "repo root 下已存在 Bootstrap ancho",
    "name": "Bootstrap anchor",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "bootstrap 目标文件中未检测到旧 fabric:kn",
    "name": "Bootstrap marker 迁移",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/AGENTS.md 不存在，已交由 boot",
    "name": "Bootstrap snapshot drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Three-end managed blocks 与 exp",
    "name": "Managed block drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "全部 6 个必需 .fabric/knowledge/* s",
    "name": "Knowledge layout",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 baseline knowledge 文件都使用 ca",
    "name": "Baseline 文件名格式",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/forensic.json 对 vite 有",
    "name": "Scan evidence",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/agents.meta.json revis",
    "name": "Agents metadata",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 content_ref entries 都能解析到 .",
    "name": "Rule content refs",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "已索引 0 个 link 和 0 个 orphan anno",
    "name": "Knowledge-test index",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/events.jsonl 已存在，可写，且可",
    "name": "Event ledger",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "events.jsonl 没有 partial traili",
    "name": "Event ledger partial write",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/events.jsonl 大小、新鲜度、me",
    "name": "Events ledger 健康 (rc.37 Plan B 5 hard gate)",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "events.jsonl 所有行都能解析为当前 schema",
    "name": "Event ledger schema 兼容性",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "\`.claude/skills/<slug>/ref/\` 与",
    "name": "Skill ref 镜像一致性",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 .claude/skills/<slug>/SKILL",
    "name": "Skill token budget",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 SKILL.md description 字段结构良好",
    "name": "Skill description quality",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "过去 7d 未检测到 cite-policy Goodhar",
    "name": "Cite-policy Goodhart",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "canonical knowledge entries 中 ",
    "name": "Knowledge draft backlog",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "canonical knowledge entries 中 ",
    "name": "Knowledge tags coverage",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "近 30 天内 knowledge_drift_detect",
    "name": "Knowledge drift unconsumed",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "mcpServers.fabric 不在 .claude/s",
    "name": "Claude MCP config 位置",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json 与磁盘上的 rule fi",
    "name": "Meta manual divergence",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 .fabric/knowledge/ .md file",
    "name": "Knowledge dir unindexed",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/knowledge/ 中未发现已声明的 st",
    "name": "Stable ID collision",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json counters enve",
    "name": "Knowledge counter desync",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No orphan canonical knowledge ",
    "name": "Filesystem-edit fallback",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "没有 canonical knowledge entries",
    "name": "Knowledge orphan demote",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "没有 draft knowledge entries 超过额",
    "name": "Knowledge stale archive",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "没有 pending knowledge entries 超",
    "name": "Knowledge pending overdue",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "team / personal trees 中没有 cano",
    "name": "Knowledge stable_id duplicate",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 canonical knowledge files 都",
    "name": "Knowledge layer mismatch",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json counters enve",
    "name": "Knowledge index drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "运行 fabric-import Skill（\`/fabri",
    "code": "knowledge_underseeded",
    "kind": "info",
    "message_prefix_30_chars": "知识库仅有 0 个 canonical entries（< ",
    "name": "Knowledge underseeded",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "没有 narrow-scope canonical entr",
    "name": "Knowledge narrow without paths",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 relevance_paths globs 都能在 w",
    "name": "Knowledge relevance_paths dangling",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "已跳过（git history unavailable；无法",
    "name": "Knowledge relevance_paths drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "没有 personal-layer entries 的 re",
    "name": "Personal-layer path misclassify",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 canonical knowledge body 均未",
    "name": "Suspicious KB injection",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Narrow-with-paths ratio 0%（0/0",
    "name": "Knowledge narrow too few",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/.cache/ 下没有超过 7 天的 ses",
    "name": "Knowledge session-hints stale",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "未发现 .fabric/.serve.lock。",
    "name": "Serve lock",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 pending entries 都声明了 releva",
    "name": "Knowledge relevance fields missing",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "所有 .claude/.codex SKILL.md fro",
    "name": "Skill markdown YAML",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "运行 /fabric-archive 执行 onboard ",
    "code": "onboard_coverage_incomplete",
    "kind": "info",
    "message_prefix_30_chars": "尚未覆盖的 onboard slots：[tech-stac",
    "name": "Onboard coverage",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "项目未启用 Claude Code（无 .claude/ 目",
    "name": "Claude Code hooks wired",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "未发现已安装的 hook 文件（.claude/hooks/",
    "name": "Hooks 运行时健康",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "PATH 上的 \`fabric\` 是 test-skippe",
    "name": "全局 fabric CLI 版本",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "0/0 个 entry 的 summary == stabl",
    "name": "知识 summary 透明度",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "knowledge_proposed=0 ≥ knowled",
    "name": "Promote ledger invariant",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "如果希望这些 knowledge 内容在 MCP 响应中可用",
    "code": "preexisting_root_claude_md",
    "kind": "info",
    "message_prefix_30_chars": "project root 检测到 AGENTS.md。这些 ",
    "name": "Preexisting root markdown",
    "status": "ok",
  },
]
`;

exports[`runDoctorReport i18n snapshots > renders stable English doctor checks from fabric_language=en 1`] = `
[
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Bootstrap anchor present at re",
    "name": "Bootstrap anchor",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No legacy fabric:knowledge-bas",
    "name": "Bootstrap marker migration",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/AGENTS.md absent — del",
    "name": "Bootstrap snapshot drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Three-end managed blocks byte-",
    "name": "Managed block drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All 6 required .fabric/knowled",
    "name": "Knowledge layout",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All baseline knowledge files u",
    "name": "Baseline filename format",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/forensic.json is valid",
    "name": "Scan evidence",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/agents.meta.json revis",
    "name": "Agents metadata",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All content_ref entries resolv",
    "name": "Rule content refs",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "0 links and 0 orphan annotatio",
    "name": "Knowledge-test index",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/events.jsonl exists, i",
    "name": "Event ledger",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "events.jsonl has no partial tr",
    "name": "Event ledger partial write",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": ".fabric/events.jsonl size, fre",
    "name": "Events ledger health (rc.37 Plan B 5 hard gate)",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "events.jsonl rows all parse ag",
    "name": "Event ledger schema compat",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All \`.claude/skills/<slug>/ref",
    "name": "Skill ref mirror parity",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All .claude/skills/<slug>/SKIL",
    "name": "Skill token budget",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All SKILL.md description field",
    "name": "Skill description quality",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No cite-policy Goodhart patter",
    "name": "Cite-policy Goodhart",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "draft-maturity entry ratio is ",
    "name": "Knowledge draft backlog",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "empty-tag ratio is healthy (≤ ",
    "name": "Knowledge tags coverage",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "knowledge_drift_detected event",
    "name": "Knowledge drift unconsumed",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "mcpServers.fabric is not in .c",
    "name": "Claude MCP config location",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json is consistent",
    "name": "Meta manual divergence",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All .fabric/knowledge/ .md fil",
    "name": "Knowledge dir unindexed",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No declared stable_id collisio",
    "name": "Stable ID collision",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json counters enve",
    "name": "Knowledge counter desync",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No orphan canonical knowledge ",
    "name": "Filesystem-edit fallback",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No canonical knowledge entries",
    "name": "Knowledge orphan demote",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No draft knowledge entries exc",
    "name": "Knowledge stale archive",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No pending knowledge entries e",
    "name": "Knowledge pending overdue",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No canonical knowledge files s",
    "name": "Knowledge stable_id duplicate",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All canonical knowledge files ",
    "name": "Knowledge layer mismatch",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "agents.meta.json counters enve",
    "name": "Knowledge index drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "Run the fabric-import Skill (\`",
    "code": "knowledge_underseeded",
    "kind": "info",
    "message_prefix_30_chars": "Knowledge corpus has only 0 ca",
    "name": "Knowledge underseeded",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No narrow-scope canonical entr",
    "name": "Knowledge narrow without paths",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All relevance_paths globs reso",
    "name": "Knowledge relevance_paths dangling",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Skipped (git history unavailab",
    "name": "Knowledge relevance_paths drift",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No personal-layer entries decl",
    "name": "Personal-layer path misclassify",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No canonical knowledge bodies ",
    "name": "Suspicious KB injection",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Narrow-with-paths ratio 0% (0/",
    "name": "Knowledge narrow too few",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No session-hints cache files o",
    "name": "Knowledge session-hints stale",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No .fabric/.serve.lock present",
    "name": "Serve lock",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All pending entries declare bo",
    "name": "Knowledge relevance fields missing",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "All .claude/.codex SKILL.md fr",
    "name": "Skill markdown YAML",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "Run /fabric-archive to onboard",
    "code": "onboard_coverage_incomplete",
    "kind": "info",
    "message_prefix_30_chars": "Onboard slots not yet covered:",
    "name": "Onboard coverage",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Project does not use Claude Co",
    "name": "Claude Code hooks wired",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "No installed hook files found ",
    "name": "Hooks runtime health",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "Global \`fabric\` on PATH is tes",
    "name": "Global fabric CLI version",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "0/0 entries have summary == st",
    "name": "Knowledge summary opacity",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": null,
    "code": null,
    "kind": null,
    "message_prefix_30_chars": "knowledge_proposed=0 >= knowle",
    "name": "Promote ledger invariant",
    "status": "ok",
  },
  {
    "actionHint_prefix_30_chars": "Move knowledge content to \`.fa",
    "code": "preexisting_root_claude_md",
    "kind": "info",
    "message_prefix_30_chars": "AGENTS.md detected at project ",
    "name": "Preexisting root markdown",
    "status": "ok",
  },
]
`;
